--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@doist/todoist-api-typescript": "^3.0.3",
+    "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.22.7",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.1"
   },
   "devDependencies": {
